Added project for german documentation

--- a/CETONI_Elements_Manual_DE/.vscode/settings.json
+++ b/CETONI_Elements_Manual_DE/.vscode/settings.json
@@ -8,5 +8,7 @@
         "menuselection",
         "Nemesys",
         "Qmix"
-    ]
+    ],
+    "cSpell.enabled": true,
+    "cSpell.language": "de"
 }
