Temprorary removed python.rst from german and english documentation

--- a/CETONI_Elements_Manual_EN/.vscode/settings.json
+++ b/CETONI_Elements_Manual_EN/.vscode/settings.json
@@ -17,5 +17,14 @@
         "duplica",
         "editfun",
         "guinums"
+    ],
+    "spellright.language": [
+        "en"
+    ],
+    "spellright.documentTypes": [
+        "markdown",
+        "latex",
+        "plaintext",
+        "restructuredtext"
     ]
 }
