--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
             cd CETONI_Elements_Manual_DE
             export PRIVATE_DOC=1
+            export PRIVATE_BUILD_DIR=_build_private
             make html
             cd ..
 
