Renamed python folder

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /CETONI_Elements_Manual_EN/_build
 /install/*.exe
 /CETONI_Elements_Manual_DE/_build_private
+/CETONI_Elements_Manual_EN/_build_private
