Updated Log Message function documentation with Debug/Trace level

--- a/CETONI_Elements_Manual_DE/.vscode/settings.json
+++ b/CETONI_Elements_Manual_DE/.vscode/settings.json
@@ -24,5 +24,14 @@
             "name": "Robotics_ProcessDataTbl",
             "database": "C:\\Users\\Public\\Documents\\QmixElements\\Projects\\robotics\\Log\\ProcessDataDbLog.sqlite"
         }
+    ],
+    "spellright.language": [
+        "de"
+    ],
+    "spellright.documentTypes": [
+        "markdown",
+        "latex",
+        "plaintext",
+        "restructuredtext"
     ]
 }
