--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,53 @@
-alabaster==0.7.12
-appdirs==1.4.4
-astroid==2.9.3
-attrs==21.4.0
-Babel==2.9.1
-breathe==4.31.0
-certifi==2021.10.8
-charset-normalizer==2.0.10
-colorama==0.4.4
-dnspython==2.2.0
-docopt==0.6.2
-docutils==0.17.1
-esbonio==0.13.0
-fett==0.3.2
-idna==3.3
-imagesize==1.3.0
-importlib-metadata==4.10.1
-isort==5.10.1
-Jinja2==3.0.3
-lazy-object-proxy==1.7.1
-markdown-it-py==2.0.1
-MarkupSafe==2.0.1
-mccabe==0.6.1
-mdit-py-plugins==0.3.0
-mdurl==0.1.0
-myst-parser==0.16.1
-networkx==2.6.3
-packaging==21.3
-platformdirs==2.4.1
-pydantic==1.8.2
-pygls==0.11.3
-Pygments==2.11.2
-pylint==2.12.2
-pymongo==3.12.3
-pyparsing==3.0.7
-pyspellchecker==0.6.3
-python-jsonrpc-server==0.3.4
-pytz==2021.3
-PyYAML==5.4.1
-requests==2.27.1
-rstcheck==3.3.1
-snooty-lextudio==1.12.0
+alabaster==0.7.16
+annotated-types==0.6.0
+attrs==23.2.0
+Babel==2.14.0
+breathe==4.35.0
+cattrs==23.2.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+docutils==0.20.1
+esbonio==0.16.4
+exceptiongroup==1.2.0
+idna==3.7
+imagesize==1.4.1
+Jinja2==3.1.3
+lsprotocol==2023.0.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdit-py-plugins==0.4.0
+mdurl==0.1.2
+myst-parser==2.0.0
+packaging==24.0
+platformdirs==4.2.0
+pydantic==2.7.0
+pydantic_core==2.18.1
+pygls==1.3.1
+Pygments==2.17.2
+pyspellchecker==0.8.1
+PyYAML==6.0.1
+requests==2.31.0
+rich==13.7.1
+rstcheck==6.2.1
+rstcheck-core==1.2.1
+shellingham==1.5.4
 snowballstemmer==2.2.0
-Sphinx==4.4.0
-sphinx-fontawesome==0.0.6
-sphinx-rtd-dark-mode==1.2.4
-sphinx-rtd-theme==1.0.0
-sphinx-togglebutton==0.3.0
-sphinx-typo3-theme==4.6.2
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.0
+Sphinx==7.2.6
+sphinx-rtd-dark-mode==1.3.0
+sphinx-rtd-theme==2.0.0
+sphinx-togglebutton==0.3.2
+sphinx-typo3-theme==4.9.0
+sphinx_fontawesome==0.0.6
+sphinxcontrib-applehelp==1.0.8
+sphinxcontrib-devhelp==1.0.6
+sphinxcontrib-htmlhelp==2.0.5
+sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-toml==0.10.2
-typeguard==2.13.3
-typing_extensions==4.0.1
-urllib3==1.26.8
-watchdog==1.0.2
-wrapt==1.13.3
-zipp==3.7.0
+sphinxcontrib-qthelp==1.0.7
+sphinxcontrib-serializinghtml==1.1.10
+tomli==2.0.1
+typer==0.12.3
+typing_extensions==4.11.0
+urllib3==2.2.1
