--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,15 @@ jobs:
           make html
           cd ..
       -
+        name: Build DE full
+        run: |
+            cd CETONI_Elements_Manual_DE
+            export FULL_DOC=1
+            export FULL_BUILD_DIR=_build_full
+            make html
+            mv _build_full/html/index_full.html _build_full/html/index.html
+            cd ..
+      -
         name: Build DE private
         run: |
             cd CETONI_Elements_Manual_DE
@@ -44,6 +53,15 @@ jobs:
           make html
           cd ..
       -
+        name: Build EN full
+        run: |
+          cd CETONI_Elements_Manual_EN
+          export FULL_DOC=1
+          export FULL_BUILD_DIR=_build_full
+          make html
+          mv _build_full/html/index_full.html _build_full/html/index.html
+          cd ..
+      -
         name: Build EN private
         run: |
           cd CETONI_Elements_Manual_EN
@@ -52,13 +70,17 @@ jobs:
           make html
           mv _build_private/html/index_private.html _build_private/html/index.html
           cd ..
-      - 
+      -
         name: Prepare Deployment
         run: |
           mkdir -p _deploy/manual_de
           cp -R CETONI_Elements_Manual_DE/_build/html/*  _deploy/manual_de
           mkdir -p _deploy/manual_en
           cp -R CETONI_Elements_Manual_EN/_build/html/*  _deploy/manual_en
+          mkdir -p _deploy/manual_de_full
+          cp -R CETONI_Elements_Manual_DE/_build_full/html/*  _deploy/manual_de_full
+          mkdir -p _deploy/manual_en_full
+          cp -R CETONI_Elements_Manual_EN/_build_full/html/*  _deploy/manual_en_full
           mkdir -p _deploy/manual_de_private
           cp -R CETONI_Elements_Manual_DE/_build_private/html/*  _deploy/manual_de_private
           mkdir -p _deploy/manual_en_private
